Lots of updates.

--- a/pixelpuncher/templates/base.html
+++ b/pixelpuncher/templates/base.html
@@ -141,6 +141,8 @@
       <!-- Your stuff: Third-party javascript libraries go here -->
       <script src="{% static 'js/jquery.shuffleLetters.js' %}"></script>
       <script src="{% static 'js/typed.js' %}"></script>
+      <script src="{% static 'js/jquery.cookie.js' %}"></script>
+      <script src="{% static 'js/ajax-cookies.js' %}"></script>
 
       <!-- place project specific Javascript in this file -->
       <script src="{% static 'js/project.js' %}"></script>
