--- a/pixelpuncher/templates/npc/_npc_profile.html
+++ b/pixelpuncher/templates/npc/_npc_profile.html
@@ -11,4 +11,6 @@
   </div>
 
   {% status_bar 'Health' npc.current_health npc.total_health 'progress-bar-danger' %}
+
+  {% include "npc/_npc_chat.html" %}
 </div>
