--- a/pixelpuncher/templates/location/_selling.html
+++ b/pixelpuncher/templates/location/_selling.html
@@ -1,3 +1,5 @@
+{% include "game/ui/talkbox.html" %}
+
 <div class="page-header">Buy</div>
 <table class="table table-striped table-hover">
   <thead>
