--- a/pixelpuncher/templates/location/visit.html
+++ b/pixelpuncher/templates/location/visit.html
@@ -40,7 +40,7 @@
 
     {% if location.npc %}
     <div class="col-md-3">
-      {% npc_profile location.npc %}
+      {% npc_profile location location.npc %}
     </div>
     {% endif %}
 
