--- a/pixelpuncher/templates/game/talk.html
+++ b/pixelpuncher/templates/game/talk.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="col-md-3">
-          {% npc_profile location npc %}
+          {% npc_profile location relationship %}
         </div>
 
     </div>
