--- a/pixelpuncher/templates/pages/home.html
+++ b/pixelpuncher/templates/pages/home.html
@@ -5,6 +5,9 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="jumbotron">
+        <div class="pull-right">
+          <img align="right" src="{% static 'images/sample_avatar_256.png' %}">
+        </div>
         <h1>Pixel Puncher</h1>
         <p>
           Want to explore endless dungeons? Want to discover unique treasure? Want to face epic challenges?
