--- a/pixelpuncher/templates/item/container/detail.html
+++ b/pixelpuncher/templates/item/container/detail.html
@@ -43,19 +43,21 @@
         </table>
       {% endif %}
 
-      <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
+      {% if player.items.count > 0 %}
+        <form action="" method="post" class="form-horizontal">
+          {% csrf_token %}
 
-        <div class="form-group form-group-sm">
-          <div class="input-group">
-            {{ form.items }}
+          <div class="form-group form-group-sm">
+            <div class="input-group">
+              {{ form.items }}
 
-            <span class="input-group-btn" style="padding-left: 4px;">
-              <button class="btn btn-primary btn-sm" type="submit">Put in {{ player_container.container.name }}</button>
-            </span>
+              <span class="input-group-btn" style="padding-left: 4px;">
+                <button class="btn btn-primary btn-sm" type="submit">Put in {{ player_container.container.name }}</button>
+              </span>
+            </div>
           </div>
-        </div>
-      </form>
+        </form>
+      {% endif %}
       <a href="{% url "location:visit" player_container.container.location.pk %}" class="btn btn-primary btn-sm">Close</a>
     </div>
   </div>
