--- a/pixelpuncher/templates/player/_equipment.html
+++ b/pixelpuncher/templates/player/_equipment.html
@@ -14,6 +14,7 @@
       {% if player.gloves %}
         {{ player.gloves }}
         [ <a class="text-info" href="#" data-toggle="modal" data-target="#itemModal{{ player.gloves.pk }}">Examine</a> ]
+      {% else %}
       {% endif %}
     </td>
   </tr>
