--- a/pixelpuncher/templates/player/_stats.html
+++ b/pixelpuncher/templates/player/_stats.html
@@ -5,23 +5,8 @@
 {% status_bar 'Health' player.current_health player.total_health 'progress-bar-danger' %}
 {% status_bar 'Energy' player.current_energy player.total_energy 'progress-bar-success' %}
 
+
 <table class="table table-striped">
-  <tr>
-    <td class="player-stats-title">Armor:</td>
-    <td class="player-stats-numbers">{{ player.effective_armor }}</td>
-  </tr>
-  <tr>
-    <td class="player-stats-title">Power:</td>
-    <td class="player-stats-numbers">{{ player.effect_power }} ({{ player.power }})</td>
-  </tr>
-  <tr>
-    <td class="player-stats-title">Technique:</td>
-    <td class="player-stats-numbers">{{ player.effect_technique }} ({{ player.technique }})</td>
-  </tr>
-  <tr>
-    <td class="player-stats-title">Endurance:</td>
-    <td class="player-stats-numbers">{{ player.effect_endurance }} ({{ player.endurance }})</td>
-  </tr>
   <tr>
     <td class="player-stats-title">Current Occupation:</td>
     <td class="player-stats-numbers">Professional Puncher</td>
@@ -39,3 +24,32 @@
     <td class="player-stats-numbers">{{ player.get_gender_display }}</td>
   </tr>
 </table>
+
+
+<div class="col-lg-6">
+  <div class="alert alert-danger">
+    <h4 class="text-center">{{ player.effect_power }}</h4>
+    <div class="text-center">Power</div>
+  </div>
+</div>
+
+<div class="col-lg-6">
+  <div class="alert alert-info">
+    <h4 class="text-center">{{ player.effect_technique }}</h4>
+    <div class="text-center">Technique</div>
+  </div>
+</div>
+
+<div class="col-lg-6">
+  <div class="alert alert-warning">
+    <h4 class="text-center">{{ player.effect_endurance }}</h4>
+    <div class="text-center">Endurance</div>
+  </div>
+</div>
+
+<div class="col-lg-6">
+  <div class="alert alert-success">
+    <h4 class="text-center">{{ player.effective_armor }}</h4>
+    <div class="text-center">Armor</div>
+  </div>
+</div>
