--- a/pixelpuncher/templates/player/detail.html
+++ b/pixelpuncher/templates/player/detail.html
@@ -72,7 +72,9 @@
           <h3 class="panel-title"><i class="mdi mdi-library-books"></i> Skills</h3>
         </div>
         <div class="panel-body">
-          {% skill_list player %}
+          {% combat_skill_list player %}
+          {% healing_skill_list player %}
+          {% passive_skill_list player %}
         </div>
       </div>
     </div>
