--- a/pixelpuncher/templates/pages/home.html
+++ b/pixelpuncher/templates/pages/home.html
@@ -21,7 +21,7 @@
     <div class="col-md-11">
       <b class="text-warning">Warning:</b>
       This game depicts extreme violence against inanimate objects.
-        No vegetables were harmed in the making of this game.
+        Almost no vegetables were harmed in the making of this game.
 
     </div>
 
