--- a/pixelpuncher/templates/player/detail.html
+++ b/pixelpuncher/templates/player/detail.html
@@ -79,6 +79,17 @@
       </div>
     </div>
 
+    <div class="col-lg-6">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><i class="mdi mdi-package"></i> Collections</h3>
+        </div>
+        <div class="panel-body">
+          {% include "player/collections/_list.html" %}
+        </div>
+      </div>
+    </div>
+
   </div>
 
 {% endblock content %}
