Added status effect model.

--- a/pixelpuncher/templates/player/_stats.html
+++ b/pixelpuncher/templates/player/_stats.html
@@ -28,21 +28,21 @@
 
 <div class="col-lg-6">
   <div class="alert alert-danger">
-    <h4 class="text-center">{{ player.effect_power }}</h4>
+    <h4 class="text-center">{{ player.effective_power }}</h4>
     <div class="text-center">Power</div>
   </div>
 </div>
 
 <div class="col-lg-6">
   <div class="alert alert-info">
-    <h4 class="text-center">{{ player.effect_technique }}</h4>
+    <h4 class="text-center">{{ player.effective_technique }}</h4>
     <div class="text-center">Technique</div>
   </div>
 </div>
 
 <div class="col-lg-6">
   <div class="alert alert-warning">
-    <h4 class="text-center">{{ player.effect_endurance }}</h4>
+    <h4 class="text-center">{{ player.effective_endurance }}</h4>
     <div class="text-center">Endurance</div>
   </div>
 </div>
