--- a/pixelpuncher/templates/base.html
+++ b/pixelpuncher/templates/base.html
@@ -86,12 +86,13 @@
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="cheats">Cheats</a>
                 <ul class="dropdown-menu" aria-labelledby="cheats">
-                  <li><a href="{% url "game:reset" %}">Reset Health/Energy/Turns</a></li>
-                  <li><a href="{% url "game:daily_reset" %}">Daily reset</a></li>
+                  <li><a href="{% url "game:cheat_code" %}">Enter Cheatcode</a></li>
                   <li class="divider"></li>
                   {% if player %}
                     {% for cheat in player.cheatcodes.all %}
-                      <li><a href="{% url "game:perform_cheat" cheat.id %}">{{ cheat.menu_text }}</a></li>
+                      {% if cheat.show_on_menu %}
+                        <li><a href="{% url "game:perform_cheat" cheat.id %}">{{ cheat.menu_text }}</a></li>
+                      {% endif %}
                     {% endfor %}
                   {% endif %}
                   <li class="divider"></li>
