--- a/pixelpuncher/templates/location/_pawn.html
+++ b/pixelpuncher/templates/location/_pawn.html
@@ -1,4 +1,4 @@
-<div class="page-header">Buy</div>
+<div class="page-header">Sell</div>
 <table class="table table-striped table-hover">
   <thead>
     <tr>
