--- a/pixelpuncher/templates/player/_item_modal.html
+++ b/pixelpuncher/templates/player/_item_modal.html
@@ -21,7 +21,7 @@
 
           {% if item.item_type.armor_rating > 0 %}
             <span class="label label-primary ">
-              Armor Rating: {{ item.item_type.armor_rating }}
+              Protection Rating: {{ item.item_type.armor_rating }}
             </span>
             &nbsp;
           {% endif %}
