--- a/pixelpuncher/templates/player/_stats.html
+++ b/pixelpuncher/templates/player/_stats.html
@@ -50,6 +50,6 @@
 <div class="col-lg-6">
   <div class="alert alert-success">
     <h4 class="text-center">{{ player.effective_armor }}</h4>
-    <div class="text-center">Armor</div>
+    <div class="text-center">Protection</div>
   </div>
 </div>
