--- a/pixelpuncher/static/css/project.css
+++ b/pixelpuncher/static/css/project.css
@@ -163,7 +163,10 @@
 
 .form-attribute-field {
   width: 30px;
+  height: 30px;
   text-align: right;
+  font-size: larger;
+  background-color: #2b3e50;
 }
 
 .numeric {
