--- a/pixelpuncher/templates/users/user_detail.html
+++ b/pixelpuncher/templates/users/user_detail.html
@@ -4,33 +4,36 @@
 {% block title %}User: {{ object.username }}{% endblock %}
 
 {% block content %}
-<div class="container">
+  {% if object == request.user %}
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title"><i class="mdi mdi-account-box"></i>  Account Info</h3>
+            </div>
+            <div class="panel-body">
+              <h3>{{ object.username }}</h3>
+              {% if object.name %}
+                <p>{{ object.name }}</p>
+              {% endif %}
 
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
+              {% if user.emailaddress_set.all %}
+                {% for emailaddress in user.emailaddress_set.all %}
+                  <div class="ctrlHolder">
+                    Email: {{ emailaddress.email }}
+                    {% if emailaddress.verified %}
+                      <span class="verified text-success"><i class="mdi mdi-checkbox-marked-circle"></i> Verified</span>
+                    {% else %}
+                      <span class="unverified text-danger"><i class="mdi mdi-emoticon-sad"></i> Unverified</span>
+                    {% endif %}
+                  </div>
+                {% endfor %}
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-
-{% if object == request.user %}
-<!-- Action buttons -->
-<div class="row">
-
-  <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
-    <!-- Your Stuff: Custom user template urls -->
-  </div>
-
-</div>
-<!-- End Action buttons -->
-{% endif %}
-
-
-</div>
+  {% endif %}
 {% endblock content %}
-
